# cis410-project3

./: README.md
project3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  proj3.sln  proj3.vcxproj  proj3.vcxproj.filters
project3/Debug/: proj3.ilk
project3/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
project3/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
project3/jacobbrown_project3/: jacobbrown_proj3.cxx
project3/proj3.dir/Debug/proj3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  proj3.lastbuildstate
